# Cpp17Training

./: .clang-format  .gitmodules  CMakeLists.txt  README.md
_exercises/CTAD/: CMakeLists.txt  tests.cpp
_exercises/fold-expressions/: CMakeLists.txt  tests.cpp
_exercises/fold-expressions/hash_combine/: tests.cpp
_project_template/: CMakeLists.txt  tests.cpp
_utils/: CMakeLists.txt
_utils/include/utils/: RangePrinter.hpp
aggregates/: CMakeLists.txt  tests.cpp
any/: CMakeLists.txt
auto/: CMakeLists.txt  tests.cpp
class-template-arg-deduction/: CMakeLists.txt  tests.cpp
examples/: CMakeLists.txt
examples/aggregates/: tests.cpp
examples/auto/: tests.cpp
examples/class-template-arg-deduction/: tests.cpp
examples/structure-binding/: tests.cpp
exercises/: CMakeLists.txt
exercises/CTAD/: CMakeLists.txt  tests.cpp
exercises/fold-expressions/: tests.cpp
fold-expressions/: tests.cpp
libs/: CMakeLists.txt
libs/traits/: CMakeLists.txt
libs/traits/include/traits/: IsIterable.hpp
libs/utils/: CMakeLists.txt
libs/utils/include/utils/: RangePrinter.hpp
libs/utils/ut/: RangePrinterTests.cpp
variant/: range_printer.hpp  tests.cpp
